# refmd

./: .gitignore  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yaml  docker-compose.yml
api/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile
api/docker/: entrypoint.sh
api/migrations/: 202509090001_create_base_tables.sql  202509090002_add_type_to_documents.sql  202509100901_add_share_exclusions.sql  202509111030_add_parent_share_id.sql  202509111200_create_document_links.sql  202509111500_create_git_configs.sql  202509111530_update_git_configs_legacy_spec.sql  202509121212_add_unique_on_git_configs_user_id.sql  202509121230_cleanup_git_configs_drop_unused.sql  202509150101_create_plugin_tables.sql  202509200201_create_plugin_installations.sql  202509290901_add_content_hash_to_files.sql  202510010900_create_git_repository_state.sql
api/openapi/: openapi.json
api/src/: lib.rs  main.rs
api/src/application/: mod.rs
api/src/application/access/: mod.rs
api/src/application/dto/: git.rs  mod.rs  plugins.rs  shares.rs  tags.rs
api/src/application/linkgraph/: mod.rs
api/src/application/ports/: access_repository.rs  awareness_port.rs  document_repository.rs  files_repository.rs  git_repository.rs  git_storage.rs  git_workspace.rs  gitignore_port.rs  linkgraph_repository.rs  mod.rs  plugin_asset_store.rs  plugin_event_publisher.rs  plugin_installation_repository.rs  plugin_installer.rs  plugin_package_fetcher.rs  plugin_repository.rs  plugin_runtime.rs  public_repository.rs  realtime_hydration_port.rs  realtime_persistence_port.rs  realtime_port.rs  realtime_types.rs  share_access_port.rs  shares_repository.rs  storage_port.rs  tag_repository.rs  tagging_repository.rs  user_repository.rs
api/src/bootstrap/: app_context.rs  config.rs
api/src/infrastructure/: mod.rs
app/: .cta.json  (+14 more)
(+364 files in other folders)
