[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros", "json", "multipart", "ws"] }
tokio = { version = "1.46", features = ["rt-multi-thread", "macros", "signal", "process"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = { version = "0.1", features = ["sync"] }
dotenvy = "0.15"
http = "1"
futures-util = { version = "0.3", features = ["sink"] }
yrs = { version = "0.24", features = ["sync"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
yrs-warp = "0.9"
async-trait = "0.1"
extism = { version = "1" }

# Markdown rendering
comrak = { version = "0.22" }
ammonia = { version = "3" }

# Database & security
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "macros"] }
argon2 = "0.5"
password-hash = "0.5"
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }
thiserror = "1"
once_cell = "1"
regex = "1"
utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
aes-gcm = "0.10"
aead = "0.5"
sha2 = "0.10"
syntect = { version = "5", default-features = true }
htmlescape = "0.3"
syntect-assets = "0.23"
rand = "0.8"
base64 = "0.21"
git2 = { version = "0.18", default-features = true, features = ["vendored-libgit2"] }
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
zip = { version = "0.6" }
urlencoding = "2"
mime_guess = "2"
